style.css
* {
    margin: 0;
    scroll-behavior: smooth;
}

h1 {
    margin: 22px 0;
}

h2 {
    margin: 20px 0;
}

h3 {
    margin: 18px 0;
}

p {
    margin: 16px 0;
}

a {
    text-decoration: none;
    color: white;
}

ul,
ol {
    list-style: none;
}

body {
    position: relative;
    font-family: "Inter", sans-serif;
    visibility: hidden;
}

button {
    border: none;
    background: none;
    cursor: pointer;
}

a {
    cursor: pointer;
}

.content__container {
    display: flex;
    min-height: 100vh;
}

.sidebar {
    background-color: var(--primary-color);
    width: var(--width-sidebar);
    flex-basis: var(--width-sidebar);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: var(--distance-bottom-main-sides);
}

.sidebar__nav-list {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding: 0;
}

.sidebar__logo {
    margin: 50px 0;
}

.sidebar__nav {
    width: 100%;
}

.sidebar__nav-link,
.sidebar__legal-information-link {
    color: inherit;
}

.sidebar__nav-link {
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 10px 60px;
}

.sidebar__list-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.sidebar__nav-link:hover {
    background-color: #2a3d59;
}

.sidebar__link--active {
    background-color: #091931 !important;
    transform: scale(1) !important;
    cursor: default;
    color: white !important;
}

.sidebar__legal-information {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 32px;
    width: 100%;
}

.sidebar__legal-information-link {
    display: block;
    padding: 10px 60px;
}

.sidebar__legal-information-link:hover {
    transform: scale(1.05);
    transform-origin: left;
    color: var(--light-blue-color);
}

.sidebar__legal-information-list {
    display: flex;
    flex-direction: column;
    gap: 32px;
    padding: 0;
}

.header-main__container {
    flex: 1;
    display: flex;
    flex-direction: column;
    background-color: var(--content-background-color);
}

.header {
    box-shadow: 0 4px 3px rgba(0, 0, 0, 0.1);
    padding: var(--padding-header-y) var(--padding-header-x);
    background-color: white;
}

.header__content {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: var(--content-limit-header);
    box-sizing: border-box;
}

.header__user-button {
    position: relative;
}

.header__user-button:hover .header__circle {
    fill: var(--lightergrey-color);
}

.header__user-interaction-container {
    position: relative;
    display: flex;
    align-items: center;
    gap: 10px;
}

.header__headline3 {
    padding-left: 56px;
}

.header__mobile-logo {
    display: none;
}

.main-content {
    margin-top: min(10%, 100px);
    max-width: var(--content-limit);
    padding: 0 50px;
    box-sizing: border-box;
    margin-bottom: var(--distance-bottom-main-sides);
}

.header__user-menu {
    display: none;
    position: absolute;
    left: -22px;
    top: 77px;
    background-color: var(--primary-color);
    border-radius: 20px;
    border-top-right-radius: 0;
    padding: 7.5px 2.5px;
    width: max-content;
}

.header__user-list {
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding: 10px;
}

.header__user-link {
    color: inherit;
    padding: 10px;
    display: block;
}

.header__user-link:hover {
    background-color: #2a3d59;
}

.header__help-icon:hover {
    transform: scale(1.2);
}

@media (max-width: 1200px) {
    .sidebar__nav-link,
    .sidebar__legal-information-link {
        padding: 10px 32px;
    }
}

@media (max-width: 850px) {
    .content__container {
        flex-direction: column;
    }
    .main-content {
        margin-bottom: 130px;
    }

    .sidebar {
        order: 1;
        position: fixed;
        bottom: 0;
        left: 0;
        height: 100px;
        flex-direction: row;
        padding-bottom: 0;
    }

    .sidebar__logo {
        display: none;
    }

    .sidebar__legal-information {
        display: none;
    }

    .sidebar__nav-list {
        flex-direction: row;
        justify-content: space-around;
    }

    .sidebar__nav-link {
        padding: 10px;
        border-radius: 20px;
        display: flex;
        flex-direction: column;
    }

    .header__help-icon {
        display: none;
    }

    .header__headline3 {
        display: none;
    }

    .header__mobile-logo {
        display: block;
    }

    .header__user-menu {
        left: -53px;
    }
}

@media (max-width: 400px) {
    .sidebar__nav-list {
        gap: 8px;
    }

    .sidebar__nav-link {
        padding: 4px;
    }

    .sidebar__nav-link {
        border-radius: 15px;
    }
}

@media (max-width: 600px) {
    .main-content {
        padding: 0 25px;
    }
}

@media (max-width: 400px) {
    .main-content {
        padding: 0 10px;
    }
}

